Increased input font size to prevent zooming on iOS

--- a/index.css
+++ b/index.css
@@ -1805,7 +1805,7 @@ textarea {
   border: 1px solid var(--clr-med-lighter);
   padding: 0.75rem;
   font-family: inherit;
-  font-size: var(--fs-smaller);
+  font-size: 16px;
   height: 150px;
   line-height: 1.4rem;
   margin: 0.75rem 0;
@@ -1819,7 +1819,7 @@ input {
   margin-bottom: 0.5rem;
   padding: 0.675rem;
   font-family: inherit;
-  font-size: var(--fs-smaller);
+  font-size: 16px;
   border-radius: 0;
 }
 
